fix text color of textarea in dark mode

--- a/src/extension/ui/pages/pendings.css
+++ b/src/extension/ui/pages/pendings.css
@@ -310,4 +310,8 @@ html.side-panel,
     .side-panel .result-cancel button {
         color: #fdfdfd;
     }
+
+    .popup-content main textarea {
+        color: black;
+    }
 }
